# ezbar

./: README.md  progress-bar.py  progress_bar.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/simpleprogressbar/: progress_bar.py
